[tool.poetry]
name = "predicthnupvotes"
version = "0.1.0"
description = ""
authors = ["Kaleb Sofer <kalebsofer@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
numpy = "^2.1.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
nltk = "^3.9.1"
transformers = "^4.45.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
sqlalchemy = "^2.0.35"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
